fix some spacing

--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ a {
 }
 
 .column3 {
-    padding-bottom: 73px;
+    padding-bottom: 70px;
     padding-top: 5px;
-    padding-left: 70px;
+    padding-left: 60px;
     padding-right: 110px;
 }
 
@@ -231,7 +231,7 @@ a {
 
 .contactinfo {
     background-color: lightgreen;
-    width:744px;
+    width:734px;
     border-radius: 10px;
     padding: 0 85px 0 10px; /* Adjusted padding for consistent spacing */
     height: 150px;
